chest fix, minor rendering, and proper reputation syncing